--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,10 @@
 font-weight: 700;
 font-size: 26px;
 letter-spacing: 0.03em;
-color: #2196f3;
+color: #212121;
+}
+.header_title:hover{
+color: var(--axent-color);
 }
 .header_main{
   font-family: var(--font-family);
