--- a/css/style.css
+++ b/css/style.css
@@ -106,8 +106,20 @@ line-height: 171%;
 letter-spacing: 0.03em;
 color: rgba(255, 255, 255, 0.6)
 }
-
-
+.container{
+  width: 1600px;
+    height: 648px;
+/*margin-left: auto;
+margin-right: auto;*/
+padding: 186px;
+padding-bottom: 94px;
+text-align: center;
+}
+.section_foto1,.section_foto2,.section_foto3,.section_foto4{
+  width: 260px; ;
+  height: 270px;
+  text-align: center;
+}
 
 
 
