--- a/css/style.css
+++ b/css/style.css
@@ -11,26 +11,41 @@
 .container{
   display: flex;
   flex-direction: row;
+  justify-content: space-around;
+  flex-wrap: wrap;
   padding-right: 15px;
   padding-left: 15px;
   width: 1230px;
 margin-left: auto;
 margin-right: auto;
-  outline: 1px solid red;
+box-shadow: 70px 77px 62px -38px rgba(0,0,0,0.66);
+-webkit-box-shadow: 70px 77px 62px -38px rgba(0,0,0,0.66);
+-moz-box-shadow: 70px 77px 62px -38px rgba(0,0,0,0.66);
+  outline: 1px solid rgb(0, 0, 0);
 }
   header{
+    display: flex;
+    flex-direction: row;
     font-family: var(--font-family);
     font-weight: 500;
     font-size: 14px;
     letter-spacing: 0.02em;
   background-color: #212121;
   }
-.header_title{
+.header_topik{
   color: #FFFFFF;
   font-family: var(--second-family);
 font-weight: 700;
 font-size: 26px;
 letter-spacing: 0.03em;
+}
+
+.header_title{
+  color: #FFFFFF;
+display: flex;
+flex-direction: row;
+font-size: 13px;
+font-weight:  400;
 }
 .header_title:hover{
 color: var(--axent-color);
@@ -50,7 +65,7 @@ letter-spacing: 0.02em;
 color: #757575;
 }
 
-.section_h1{
+.section_text{
   font-family: var(--font-family);
 font-weight: 900;
 font-size: 44px;
@@ -63,6 +78,7 @@ color: #fff;
 .btn{
   font-family: var(--font-family);
 font-weight: 700;
+border-radius: 10px;
 font-size: 16px;
 line-height: 187%;
 letter-spacing: 0.06em;
@@ -78,7 +94,7 @@ letter-spacing: 0.03em;
 text-transform: uppercase;
 }
 
-.section_p{
+.section_title{
   font-family: var(--font-family);
 font-weight: 400;
 font-size: 14px;
@@ -86,13 +102,13 @@ line-height: 171%;
 letter-spacing: 0.03em;
 color: #757575;
 }
-.section1{
+.section{
   display: flex;
   font-family: var(--font-family);
 font-weight: 700;
 font-size: 36px;
 letter-spacing: 0.03em;
-text-align: center;
+padding-left: 560px;
 color: #212121;
 }
 .footer{
@@ -103,7 +119,7 @@ letter-spacing: 0.03em;
 text-align: center;
 color: #212121;
 }
-.footer_a{
+.footer_link{
   font-family: var(--font-family);
 font-weight: 400;
 font-size: 16px;
@@ -122,7 +138,7 @@ color: rgba(255, 255, 255, 0.6)
 
 
 
-.section_foto1,.section_foto2,.section_foto3,.section_foto4{
+.section_foto{
   display: flex;
   width: 260px; ;
   height: 270px;
