--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,9 @@ margin-right: auto;
     font-size: 14px;
     height: 100px;
     letter-spacing: 0.02em;
-  background-color: #212121;
+    background: #4d4d4d;
+background: linear-gradient(90deg, rgba(77, 77, 77, 1) 0%, rgba(2, 77, 176, 1) 100%);
+  /*background-color: #212121;*/
   }
 .header_topik{
   color: #FFFFFF;
@@ -107,7 +109,8 @@ line-height: 136%;
 letter-spacing: 0.06em;
 text-transform: uppercase;
 text-align: center;
-background-color: #212121;
+background: #4d4d4d;
+background: linear-gradient(90deg, rgba(77, 77, 77, 1) 0%, rgba(2, 77, 176, 1) 100%);
 color: #fff;
 }
 .btn{
