--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,6 @@ text-align: center;
 }
 .btn{
 width: 216px;
-height: 50px;
 font-family: var(--font-family);
 font-weight: 700;
 font-size: 16px;
@@ -91,6 +90,11 @@ letter-spacing: 0.06em;
 color: #fff;
 background-color: var(--axent-color);
 border-radius: 10px;
+}
+
+
+.btn:hover{
+background-color: lightslategray;
 }
 
 
@@ -122,10 +126,7 @@ padding: 180px 452px 1px;
     justify-content: space-around;
 }
 
-.team_text{
-display: flex;
-justify-content: center;
-}
+
 
 
 .section_team:hover{
@@ -166,7 +167,7 @@ text-transform: uppercase;
 
 .main_team{
 display: flex;
-justify-content: center;
+align-items: center;
 }
 
 .section_title{
