--- a/css/style.css
+++ b/css/style.css
@@ -207,9 +207,17 @@ flex-wrap: wrap;
   padding: 90px 0;
 }
 
+.portfolio_btn{
+  background-color: #F5F4FA;
+  padding: 8px 26px;
+}
 
-
-
+.portfolio_btn:hover{
+  background-color: var(--axent-color);
+  color: #FFFFFF;
+    box-shadow: 0 2px 1px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+}
 
 
 
