--- a/css/style.css
+++ b/css/style.css
@@ -193,7 +193,36 @@ letter-spacing: 0.03em;
 color: #757575;
 }
 
+.regular_client{
+  font-family: var(--font-family);
+font-weight: 700;
+font-size: 36px;
+letter-spacing: 0.03em;
+text-align: center;
+color: #212121
+}
 
+/*.client_list{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  display: 12px;
+}
+
+.client_item{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+   padding: 32px 16px;
+   height: 60px;  
+   width: 106px;
+   gap: 30px;
+   outline:1px solid #AFB1B8;
+}
+
+.client_icon{
+
+}*/
 
 .footer{
   font-family: var(--font-family);
@@ -251,7 +280,18 @@ flex-wrap: wrap;
   border-radius: 4px;
 }
 
+.footer_adress{
+    color: #FFFFFF;
+}
 
+
+.messenger{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #FFFFFF;
+  margin-bottom: 20px;
+}
 
 
 
