--- a/css/style.css
+++ b/css/style.css
@@ -56,10 +56,12 @@ height: 44px;
   margin-right: 10px;
   background-color: var(--alert-text-color);
   color: var(--text-color);
-  border-radius: 50%;
+
 }
 
-
+.social_header_item:hover{
+  color: var(--axent-color);
+}
 
 
 .header_item:hover{
@@ -193,7 +195,7 @@ height: 44px;
   box-shadow: 0 2px 1px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12);
 background: #fff;
 text-align: center;
-padding-bottom: 30px;
+padding-bottom: 94px;
 }
 
 .section_text{
@@ -209,32 +211,47 @@ color: #757575;
   font-family: var(--font-family);
 font-weight: 700;
 font-size: 36px;
+padding-bottom: 50px;
 letter-spacing: 0.03em;
 text-align: center;
 color: #212121
 }
 
-/*.client_list{
+.client_list{
   display: flex;
-  align-items: center;
   justify-content: center;
   display: 12px;
+   gap: 30px;
+   padding-bottom: 94px
 }
 
 .client_item{
   display: flex;
   align-items: center;
   justify-content: center;
-   padding: 32px 16px;
-   height: 60px;  
-   width: 106px;
-   gap: 30px;
+   padding: 24px 20px;
+   height: 92px;  
+   width: 170px;
+  color: var(--text-color);
    outline:1px solid #AFB1B8;
+  
 }
 
-.client_icon{
+.client_item:hover{
+   outline:1px solid #2196F3;
+}
 
-}*/
+
+.client_icon{
+fill: var(--text-color);
+height: 80px;
+width: 100px;
+}
+
+.client_icon:hover{
+ fill: var(--axent-color);
+}
+
 
 .footer{
   font-family: var(--font-family);
