--- a/css/style.css
+++ b/css/style.css
@@ -162,7 +162,9 @@ color: #757575;
 margin: 10px 0;
 }
 
-
+.clientse{
+  padding: 94px 0;
+}
 
 .social_list{
   display: flex;
@@ -198,7 +200,7 @@ height: 44px;
   box-shadow: 0 2px 1px 0 rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12);
 background: #fff;
 text-align: center;
-padding-bottom: 94px;
+padding-bottom: 44px;
 }
 
 .section_text{
@@ -225,8 +227,6 @@ color: #212121
   justify-content: center;
   display: 12px;
    gap: 30px;
-        padding-top: 54px;
-   padding-bottom: 94px
 }
 
 .client_item{
@@ -314,6 +314,8 @@ flex-wrap: wrap;
 }
 
 .footer_adress{
+  display: flex;
+  align-items: baseline;
     color: #FFFFFF;
 }
 
