--- a/css/style.css
+++ b/css/style.css
@@ -393,6 +393,7 @@ font-family: var(--font-family);
 background-color: var(--axent-color);
 font-weight: 400;
 width: 216px;
+padding: 10px 52px;
 font-size: 12px;
 line-height: 187%;
 letter-spacing: 0.06em;
@@ -443,9 +444,13 @@ pointer-events: none;
   padding: 12px;
 }
 
+.modal_label:focus-within{
+color: var(--axent-color);
+}
+
 .modal-close-button{
   display: flex;
-  justify-content: flex-end;
+justify-content: flex-start;
 width: 30px;
 height: 30px;
 }
@@ -453,4 +458,6 @@ height: 30px;
 .label_text{
   display: flex;
   justify-content: center;
+ 
 }
+
