--- a/css/style.css
+++ b/css/style.css
@@ -392,12 +392,11 @@ padding: 24px;
 font-family: var(--font-family);
 background-color: var(--axent-color);
 font-weight: 400;
-width: 216px;
 padding: 10px 52px;
 font-size: 12px;
 line-height: 187%;
 letter-spacing: 0.06em;
-color: #fff;.
+color: #fff;
 }
 
 .button_label:hover{
@@ -441,16 +440,15 @@ pointer-events: none;
 .modal_label{
   display: flex;
   flex-direction: column;
+  position: relative;
   padding: 12px;
 }
 
-.modal_label:focus-within{
-color: var(--axent-color);
-}
+
 
 .modal-close-button{
   display: flex;
-justify-content: flex-start;
+justify-content: flex-end;
 width: 30px;
 height: 30px;
 }
@@ -458,10 +456,27 @@ height: 30px;
 .label_text{
   display: flex;
   justify-content: center;
- 
+ color: #757575;
 }
 
-.aaa{
+.input_label:focus-within{
+  color: var(--axent-color);
+}
 
-height: 110px;
+
+
+.input_label{
+border: 1px solid rgba(33, 33, 33, 0.2);
+border-radius: 4px;
+width: 448px;
+height: 40px;
+}
+
+
+.modal_text{
+ border: 1px solid rgba(33, 33, 33, 0.2);
+border-radius: 4px;
+width: 448px;
+height: 120px;
+
 }
