--- a/css/style.css
+++ b/css/style.css
@@ -357,6 +357,34 @@ gap: 30px;
 flex-wrap: wrap;
 }
 
+
+
+.div_box{
+  position: relative;
+  overflow: hidden;
+}
+
+.overlay{
+position: absolute;
+display: flex;
+align-items: center;
+justify-content: center;
+width: 100%;
+height: 100%;
+background-color: #2196f3;
+color: #FFFFFF;
+top: 0;
+left: 0;
+opacity: 70%;
+transform: translateY(100%);
+transition-property: transform;
+transition-duration: 500ms;
+}
+
+.div_box:hover .overlay{
+  transform: translate(0);
+}
+
 .portfolio{
   padding: 90px 0;
 }
