дз 27, 28, 29, не здавав раніше бо не було інтернету

--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,24 @@ height: 44px;
   margin-right: 10px;
 }
 
+.header_item{
+  transition: color 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); ;
+
+}
+
+.header_contact_item{
+      transition: color 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); ;
+}
+
+
+.button_label{
+    transition: color 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); ;
+}
+
+
 .header_item:hover{
 color: var(--axent-color);
 }
@@ -143,6 +161,8 @@ letter-spacing: 0.06em;
 color: #fff;
 background-color: var(--axent-color);
 border-radius: 10px;
+transition: color 250ms;
+transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); ;
 }
 
 
@@ -254,6 +274,8 @@ height: 44px;
   width: 20px;
   height: 20px;
   fill: currentColor;
+  transition: color 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); ;
 }
 
 .team_item{
@@ -309,7 +331,8 @@ color: #212121
 fill: var(--text-color);
 height: 80px;
 width: 100px;
-
+    transition: color 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); ;
 }
 
 .client_icon:hover{
@@ -447,6 +470,8 @@ line-height: 187%;
 letter-spacing: 0.06em;
 color: #fff;
 bottom: 35px;
+    transition: color 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); ;
 }
 
 .button_label:hover{
