--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,6 @@ background-color: var(--axent-color);
 
 .header_list{
   display: flex;
-
   flex-direction: row;
   align-items: center;
   gap: 50px;
@@ -572,3 +571,81 @@ width: 448px;
 height: 120px;
 
 }
+
+
+
+
+
+/* таблетна версія */
+
+  @media screen and (min-width: 768px) and (max-width 1200px){
+
+  .container{
+width: 480px;
+}
+
+.header_logo{
+margin-left: 96px;
+}
+
+.header_contact{
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 10px;
+  margin-left: 46px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.section_list{
+  flex-wrap: wrap;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  }
+
+
+
+
